<resources>
  <string name="app_name">COO_Bookshelf</string>
  <string name="Title_Text_View">Capital City Otters Bookshelf\nYour personal library</string>
  <string name="First_Name_Edit_Box">Enter your first name</string>
  <string name="Email_Text_Box">Enter your email</string>
  <string name="Password_Text_Box">Enter your password</string>
  <string name="FirstName_Title_Box">First Name</string>
  <string name="Email_Title_Box">Email</string>
  <string name="Password_Title_Box">Password</string>
  <string name="LOGIN_BUTTON">LOGIN</string>
  <string name="Login_Logo">Login Logo Bookshelf</string>
  <string name="Title_Login_Page">Capital City Otters Bookshelf</string>
  <string name="Message_Logo">Your personal library</string>
  <string name="SignUp_Link">Don\'t have an account? Sign Up</string>
  <string name="password_confirmation">Password Confirmation</string>
  <string name="re_enter_password">Re-Enter Password</string>
  <string name="create_account">CREATE ACCOUNT</string>
  <string name="login_page_link">Already have an account? Log In</string>
  <string name="sign_up">Sign Up</string>
  <string name="welcome_username"><![CDATA[Welcome <username>]]></string>
  <string name="you_currently_have_s_books_in_your_bookshelf"><![CDATA[You currently have <>s books in your bookshelf]]></string>
  <string name="admin_view">Admin View</string>
  <string name="search_discover_books">Search / Discover Books</string>
  <string name="my_books">My Books</string>
  <string name="last_name_text">Last name</string>
  <string name="first_name_text">First name</string>
  <string name="save_button_text">Save</string>
  <string name="please_enter_your_first_and_last_name">Please enter your first and last name</string>
  <string name="let_s_complete_your_profile">Let\'s complete your profile</string>
  <string name="log_in">Log In</string>
  <string name="hint_email">Email</string>
  <string name="hint_password">Password</string>
  <string name="book_cover">Book cover</string>
  <string name="back">Back</string>
  <string name="labelFor_detailAuthor_by">By:</string>
  <string name="published">Published:</string>
  <string name="isbn">ISBN:</string>
  <string name="description">Description:</string>
  <string name="title">Title</string>
  <string name="author">Author</string>
  <string name="back_arrow_text">←</string>
  <string name="app_title_text">Capital City Otters Bookshelf</string>
  <string name="version_text">Version 1.0</string>
  <string name="app_purpose_text">This app was developed as a school project to demonstrate Android app development skills. It allows users to manage a simple personal library by adding, viewing, and searching books.</string>
  <string name="created_by_text">Created by:</string>
  <string name="group_names_text">• Rose Arias-Aceves\n• Kristine Barruzo\n• Steve Mendoza\n• Armando Sarza</string>
  <string name="about_text">About</string>
  <string name="sign_out_text">Sign Out</string>
  <string name="admin_settings_text">Admin Settings</string>
  <string name="add_books_text">Add a Book</string>
  <string name="email_hint">Email</string>
  <string name="password_hint">Password</string>
  <string name="confirm_password_hint">Confirm password</string>
  <string name="notification_text">Notifications</string>
  <string name="add_books">Add Books</string>
  <string name="no_books_in_your_library_please_add_books">No books in your library!</string>
  <string name="admin_logo">admin_logo</string>
  <string name="remove_users">Remove Users</string>
  <string name="create_new_account">Create New Account</string>
  <string name="admin_checkbox">Admin</string>
  <string name="add_users_button">Add Users</string>
  <string name="admin_view_text">Admin View</string>
  <string name="hello_admin">Hello admin</string>
</resources>